k8s/tax-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-service-deployment
spec:
  replicas: 1     
  selector:
    matchLabels:
      app: tax-service
  template:
    metadata:
      labels:
        app: tax-service
    spec:
      containers:
        - image: tax-service:1.0
          name: tax-service
          imagePullPolicy: Never
          ports:
            - containerPort: 80
