k8s/tax-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tax-service-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: tax-service
